example/errors/interpret/mismatch_array_type_length.box
set arr: [[int]; 2] = [[1, 2, 3]];
